--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<header>
 		<div class="container">	
 		<div class="logo">
-			<img src="images/logo.svg" alt="Quick">
+			<img src="images/logo.jpg" alt="Quick">
 		</div>
 		<nav class="menu">
 			<ul>
@@ -94,7 +94,7 @@
 	<!-- feature end-->
 	<!-- footer start -->
 	<footer>
-			<p>@Copyright by <a href="#">LEDP SHERPUR.</a>All right reserved 2020</p>
+			<p>@Copyright by <a href="#">MD.HASIBUL HOQUE. </a>All right reserved 2020</p>
 	</footer>
 	<!-- footer start -->
 
