--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<header>
 		<div class="container">	
 		<div class="logo">
-			<img src="images/logo.jpg" alt="Quick">
+			<img src="images/logo-img.jpg" alt="Quick">
 		</div>
 		<nav class="menu">
 			<ul>
